Fix 1.16.5 build